--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: #A9A9A9;
+    background: #696969;
 }
 .box
 {
@@ -43,7 +43,7 @@ body
 {
     margin: 0;
     padding-left: 0;
-    color: #A9A9A9;
+    color: #696969;
     font size: 40;
 }
 .box .content p
